Bug 1717312 - clear mapped values if we're not animating any more r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D188712