dom/smil/SMILCSSProperty.cpp
@@ -101,9 +101,7 @@ nsresult SMILCSSProperty::SetAnimValue(const SMILValue& aValue) {
 }
 
 void SMILCSSProperty::ClearAnimValue() {
-  // Put empty string in override style for our property
-  mElement->SMILOverrideStyle()->SetPropertyValue(mPropID, ""_ns, nullptr,
-                                                  IgnoreErrors());
+  mElement->SMILOverrideStyle()->ClearSMILValue(mPropID);
 }
 
 // Based on http://www.w3.org/TR/SVG/propidx.html
