dom/svg/SVGElement.cpp
@@ -1507,8 +1507,13 @@ void SVGElement::DidAnimateLength(uint8_t aAttrEnum) {
     // We don't map use element width/height currently. We can remove this
     // test when we do.
     if (propId != eCSSProperty_UNKNOWN) {
-      SMILOverrideStyle()->SetSMILValue(propId,
-                                        GetLengthInfo().mValues[aAttrEnum]);
+      auto lengthInfo = GetLengthInfo();
+      if (lengthInfo.mValues[aAttrEnum].IsAnimated()) {
+        SMILOverrideStyle()->SetSMILValue(propId,
+                                          lengthInfo.mValues[aAttrEnum]);
+      } else {
+        SMILOverrideStyle()->ClearSMILValue(propId);
+      }
     }
   }
 
@@ -1711,8 +1716,13 @@ void SVGElement::DidAnimatePathSegList() {
 
   // Notify style we have to update the d property because of SMIL animation.
   if (name == nsGkAtoms::d) {
-    SMILOverrideStyle()->SetSMILValue(nsCSSPropertyID::eCSSProperty_d,
-                                      *GetAnimPathSegList());
+    auto* animPathSegList = GetAnimPathSegList();
+    if (animPathSegList->IsAnimating()) {
+      SMILOverrideStyle()->SetSMILValue(nsCSSPropertyID::eCSSProperty_d,
+                                        *animPathSegList);
+    } else {
+      SMILOverrideStyle()->ClearSMILValue(nsCSSPropertyID::eCSSProperty_d);
+    }
   }
 
   DidAnimateAttribute(kNameSpaceID_None, name);
