layout/style/nsDOMCSSAttrDeclaration.h
@@ -55,6 +55,10 @@ class nsDOMCSSAttributeDeclaration final : public nsDOMCSSDeclaration {
                         const SVGAnimatedLength& aLength);
   nsresult SetSMILValue(const nsCSSPropertyID,
                         const mozilla::SVGAnimatedPathSegList& aPath);
+  void ClearSMILValue(const nsCSSPropertyID aPropID) {
+    // Put empty string in override style for our property
+    SetPropertyValue(aPropID, ""_ns, nullptr, mozilla::IgnoreErrors());
+  }
 
   void SetPropertyValue(const nsCSSPropertyID aPropID, const nsACString& aValue,
                         nsIPrincipal* aSubjectPrincipal,
